# rust-bench-utils

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bench-criterion-comp.sh  bench-criterion-full-micro.sh  bench-criterion-full-millis.sh  bench-criterion-plain.sh  bench-validate_bench_one.sh  bench-validate_bench_run.sh  bench-validate_latency_overhead.sh  check-features.sh  check.sh  copy-models-yml.sh  coverage-add-validations.sh  coverage.sh  exec-herdr.sh  exec-omp.sh  exec-zellij.sh  follow-up.md  gen-doc.sh  models.yml  run-benches.sh  test-features.sh  test-long.sh  test.sh  validate-integr-repeat.sh  validate-unit-repeat.sh  validate.sh  validate1.sh
.claude/: settings.local.json
.claude/agent-memory/: MEMORY.md
.claude/agent-memory/doc-comments-checker/: MEMORY.md  audit-report-2026-05-11.md
.claude/agent-memory/test-doctor/: audit-2026-05-11.md
.claude/agents/: clippy-fixer.md  doc-comments-checker.md  feature-gate-checker.md  feature-tester.md  general.md  test-doctor.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  setup.sh
.omp/agent/: models.yml
benches/: criterion_comp.rs  criterion_plain.rs  validate_bench_one.rs  validate_bench_run.rs  validate_busy_work.rs  validate_fake_work.rs  validate_latency_overhead.rs
benches/support/: bench_basic_naive.rs  mod.rs
examples/: approx_eq.rs  bench_run_overhead.rs  busy_work.rs  calibration.rs  deterministic_sample.rs  fpsecs_debug.rs  list_bench_tests.rs  list_bench_tests_cli.rs  list_integr_bench_tests.rs  list_unit_bench_tests.rs  panic_on_error.rs  parallel.rs  parse_crit_to_csv.rs  uniform_deterministic_sample.rs  zero_latency.rs
src/: bench_cfg.rs  bench_one.rs  bench_out.rs  bench_run.rs  bench_support.rs  busy_work.rs  comp.rs  crate_utils.rs  deterministic_sample.rs  fake_work.rs  latency.rs  lib.md  lib.rs  status.rs  summary_stats.rs  test_support.rs
src/collect/: bench_one.rs  bench_out.rs  comp.rs  mod.rs
src/core/: mod.rs  work_fns.rs
src/dev_support/: mod.rs  quicksort.rs
src/duo/: bench_run.rs  duo_out.rs  mod.rs
src/load/: busy_work.rs  busy_work_sha.rs  busy_work_simple.rs  fake_work.rs  mod.rs
src/multi/: bench_out.rs  bench_run.rs  latency_source.rsx  latency_src.rs  mod.rs  test_support.rs
src/test_support/: abs_rel_diff.rs  miscellaneous.rs  mod.rs  quicksort.rs  test_finder-fixed.rs  test_finder.rs
tests/: bench_run_integration.rs  bench_run_parallel.rs  bench_run_validate.rs
