[package]
name = "bench_utils"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Simple utilities to measure latency and synthesise functions with predictable latency."
repository = "https://github.com/pvillela/rust-bench-utils/tree/main"
documentation = "https://docs.rs/bench_utils/latest/bench_utils/"
readme = "README.md"
keywords = [
    "latency",
    "measurement",
    "performance",
    "benchmarking",
    "calibration",
]
categories = ["development-tools::profiling"]
exclude = ["CHANGELOG.md", "*.sh", ".gitignore", "examples", "bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic_stats = { path = "../basic-stats", default-features = false, optional = true }
criterion = { version = "0.8.2", optional = true }
hdrhistogram = "7.5"
log = "0.4.32"
regex = { version = "1.12.3", optional = true }
sha2 = { version = "0.11.0", optional = true }

[dev-dependencies]
env_logger = "0.11"
statrs = "0.18"

[features]

## Public
default = ["basic_stats/normal"] # should always be enabled for public use
load = ["dep:sha2"]

## Helpers
__null = ["dep:basic_stats"]

## Internal

# MUST UPDATE THIS WHENEVER OTHER FEATURES CHANGE
_ALL_NON_TEST = ["default", "load", "_experimental", "_bench_diff"]

_bench = [
    "_test_support",
    "load",
    "dep:criterion",
] # used by some benches and some tests
_test = ["_test_support"]
_test_support = [
    "basic_stats/_dev_utils",
    "basic_stats/detm_samp",
    "basic_stats/rand_samp",
    "dep:regex",
] # used only for gating non-test items
_experimental = [
    "basic_stats/wilcoxon",
] # functionality developed but not intended for clients

## Shared with friends
_bench_diff = ["_experimental"] # for use by `bench_diff` crate

[package.metadata.docs.rs]
features = ["load"]

[[bench]]
name = "criterion_comp"
harness = false

[[bench]]
name = "criterion_plain"
harness = false

[[bench]]
name = "validate_bench_run"
harness = false
required-features = ["_bench"]

[[bench]]
name = "validate_busy_work"
harness = false
required-features = ["_bench"]

[[bench]]
name = "validate_fake_work"
harness = false
required-features = ["_test"]

[[bench]]
name = "validate_latency_overhead"
harness = false
required-features = ["_bench"]
